kubernetes-files/configuration-deployment-default.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: configservice-default
  name: configservice-default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configservice-default
  template:
    metadata:
      labels:
        app: configservice-default
    spec:
      containers:
        - name: configservice
          image: quay.io/rhdevelopers/balloon-game-config:default
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: /health/live
            initialDelaySeconds: 1
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 1
            periodSeconds: 3
          resources:
            requests:
              memory: "250Mi"
              cpu: "250m"
            limits:
              memory: "500Mi"
              cpu: "500m"
