kubernetes-files/gameclient-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gameclient
  name: gameclient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gameclient
  template:
    metadata:
      labels:
        app: gameclient
    spec:
      containers:
        - name: gameclient
          image: quay.io/rhdevelopers/balloon-game-client
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
