kubernetes-files/gameserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gameserver
  name: gameserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gameserver
  template:
    metadata:
      labels:
        app: gameserver
    spec:
      containers:
        - name: gameserver
          image: quay.io/rhdevelopers/balloon-game-server:v0.1.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: public-key
              mountPath: "/usr/app"
              readOnly: true
          resources:
            requests:
              memory: "2000Mi"
              cpu: "1000m" # 1 core
            limits:
              memory: "2000Mi"
              cpu: "1000m" # 1 core
          livenessProbe:
            httpGet:
              port: 8080
              path: /health/live
            initialDelaySeconds: 1
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 1
            periodSeconds: 3
      volumes:
        - name: public-key
          secret:
            secretName: jwt-public-key
            items:
              - key: publicKey
                path: publicKey
