kubernetes-files/configuration-service-default.yaml
apiVersion: v1
kind: Service
metadata:
  name: configservice-default
  labels:
    app: configservice-default
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: configservice-default
  type: ClusterIP
