kubernetes-files/gameclient-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: game-client2
  namespace: game
  labels:
    app: gameclient2
spec:
  to:
    kind: Service
    name: gameclient
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
