kubernetes-files/gameserver-route-gcp.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gameserver
  namespace: game
  labels:
    app: gameserver
spec:
  host: gameserver-game.apps.gcp.kameshs.dev
  to:
    kind: Service
    name: gameserver
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
