kubernetes-files/gameserver-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gameserver2
  namespace: game
  labels:
    app: gameserver2
spec:
  to:
    kind: Service
    name: gameserver
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
